--- a/NSHoverableButtonDemo/Base.lproj/MainMenu.xib
+++ b/NSHoverableButtonDemo/Base.lproj/MainMenu.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14109" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
+        <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14109"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,7 +12,7 @@
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
-        <customObject id="-3" userLabel="Application"/>
+        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="NSHoverableButtonDemo" customModuleProvider="target">
             <connections>
                 <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
@@ -689,15 +690,15 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="J5Y-w4-zj7">
-                        <rect key="frame" x="165" y="257" width="150" height="23"/>
-                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Thanks for using" id="eyT-2f-QNY">
+                        <rect key="frame" x="162" y="257" width="156" height="23"/>
+                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Thanks for using:" id="eyT-2f-QNY">
                             <font key="font" size="18" name="Helvetica-Bold"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
                     <button translatesAutoresizingMaskIntoConstraints="NO" id="dvq-mh-Rlb" customClass="NSHoverableButton" customModule="NSHoverableButtonDemo" customModuleProvider="target">
-                        <rect key="frame" x="140" y="138" width="200" height="79"/>
+                        <rect key="frame" x="140" y="158" width="200" height="79"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="200" id="5xK-K8-GMG"/>
                             <constraint firstAttribute="height" constant="79" id="fhx-wa-98j"/>
@@ -711,11 +712,28 @@
                             <userDefinedRuntimeAttribute type="image" keyPath="unhoveringImage" value="img2"/>
                         </userDefinedRuntimeAttributes>
                     </button>
+                    <button translatesAutoresizingMaskIntoConstraints="NO" id="nrV-jE-fIB" customClass="NSHoverableButton" customModule="NSHoverableButtonDemo">
+                        <rect key="frame" x="233" y="103" width="15" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="15" id="DzF-1I-k2A"/>
+                            <constraint firstAttribute="height" constant="25" id="SsD-X2-4Mv"/>
+                        </constraints>
+                        <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="vjB-cU-Xna">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="image" keyPath="hoveringImage" value="lighting"/>
+                            <userDefinedRuntimeAttribute type="image" keyPath="unhoveringImage" value="lighting_off"/>
+                        </userDefinedRuntimeAttributes>
+                    </button>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="nrV-jE-fIB" firstAttribute="centerX" secondItem="EiT-Mj-1SZ" secondAttribute="centerX" id="1xk-q4-ewD"/>
+                    <constraint firstItem="nrV-jE-fIB" firstAttribute="top" secondItem="dvq-mh-Rlb" secondAttribute="bottom" constant="30" id="Bg1-PK-smr"/>
                     <constraint firstItem="J5Y-w4-zj7" firstAttribute="centerX" secondItem="EiT-Mj-1SZ" secondAttribute="centerX" id="a6Q-eL-6gw"/>
                     <constraint firstItem="J5Y-w4-zj7" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" constant="80" id="eij-Nm-WQR"/>
-                    <constraint firstItem="dvq-mh-Rlb" firstAttribute="top" secondItem="J5Y-w4-zj7" secondAttribute="bottom" constant="40" id="fCt-C2-Vv9"/>
+                    <constraint firstItem="dvq-mh-Rlb" firstAttribute="top" secondItem="J5Y-w4-zj7" secondAttribute="bottom" constant="20" id="fCt-C2-Vv9"/>
                     <constraint firstItem="dvq-mh-Rlb" firstAttribute="centerX" secondItem="EiT-Mj-1SZ" secondAttribute="centerX" id="u4f-WW-Pur"/>
                 </constraints>
             </view>
@@ -724,5 +742,7 @@
     <resources>
         <image name="img1" width="170" height="30"/>
         <image name="img2" width="170" height="30"/>
+        <image name="lighting" width="39" height="68"/>
+        <image name="lighting_off" width="39" height="68"/>
     </resources>
 </document>
